# multi-agent-doc-analyzer

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
app/: config.py  logging_config.py  main.py
app/agents/: analyst_agent.py  editor_agent.py  index_agent.py  orchestrator.py  parser_agent.py  verifier_agent.py
app/api/: routes.py
app/db/: crud.py  session.py
app/services/: document_parser.py  embedding_service.py  llm_service.py  nli_service.py  reranker_service.py  vector_store.py
app/worker/: tasks.py
dashboard/: app.py
scripts/: setup.sh  start.sh
tests/: test_analyst_agent.py  test_dependency_regression.py  test_index_agent.py  test_orchestrator_reliability.py  test_parser_agent.py  test_schemas.py
